Bug 4408 - Missing dashes on stroked curves
Summary: Missing dashes on stroked curves
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.0.1
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-09-09 17:03 UTC by Carl Worth
Modified: 2005-09-15 17:26 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Add support for dashed splines (3.54 KB, patch)
2005-09-09 17:08 UTC, Carl Worth
Details | Splinter Review

Description Carl Worth 2005-09-09 17:03:38 UTC
Curved portions of paths are always drawn solid, and never dashed.
Comment 1 Carl Worth 2005-09-09 17:08:21 UTC
Created attachment 3215 [details] [review]
Add support for dashed splines

Here's an initial patch to add this support.
Comment 2 Carl Worth 2005-09-16 10:26:06 UTC
2005-09-16  Carl Worth  <cworth@cworth.org>

        Tested by: John Ellson
        Closes bug #4408
        https://bugs.freedesktop.org/show_bug.cgi?id=4408

        * src/cairo-path-stroke.c: (_cairo_stroker_curve_to_dashed),
        (_cairo_path_fixed_stroke_to_traps): Add support for dashed
        splines. (The antialiasing quality isn't perfect, but at least the
        curves are dashed now).


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.