Tested by: John Ellson Closes bug #4408 https://bugs.freedesktop.org/show_bug.cgi?id=4408 Add support for dashed splines. (The antialiasing quality isn't perfect, but at least the curves are dashed now).